--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,37 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black (>=25.1.0,<26.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.lint.dependencies]
+black = "^25.1.0"
+flake8 = "^7.1.2"
+isort = "^6.0.1"
+mypy = "^1.15.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+pytest-cov = "^6.0.0"
+
+[tool.black]
+line-length = 119
+exclude = '''
+/(
+    \.git
+    \.venv
+)/
+'''
+
+[tool.isort]
+line_length = 119
+
+[tool.mypy]
+disallow_untyped_defs = true
+warn_return_any = true
+exclude = 'venv'
